Fixed top alignment of error/success form icons

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -97,7 +97,7 @@ form {
         & .form-group.error::after {
             content: "";
             position: absolute;
-            top: 2.65rem;
+            top: 2rem;
             right: 0.75rem;
             width: 1.25rem;
             height: 1.25rem;
